# native_toolchain_cmake

./: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml  run_cmake_process.dart
.github/: dependabot.yml
.github/workflows/: examples.yaml  formatter.yaml  publish.yml  test_publish.yml
cmake/: aarch64-clang.toolchain.cmake  x86_64-linux-gnu.toolchain.cmake
example/: README.md  example.dart  ffigen.yaml  pubspec.yaml
example/add/: README.md  ffigen.yaml  pubspec.yaml
example/add/src/: CMakeLists.txt
example/add/src/src/: add.c  add.h
example/dart_cli/: c.txt  cc.txt  pubspec.yaml
example/flutter/: README.md  pubspec.yaml
example/hook/: build.dart
example/src/: CMakeLists.txt
example/test/: example_test.dart
lib/: native_toolchain_cmake.dart
test/: helpers.dart  mock_components.dart
test/builder/: cbuilder_cross_linux_host_test.dart  cbuilder_cross_windows_host_test.dart  cmake_builder_cache_test.dart  cmake_builder_cross_android_test.dart  cmake_builder_cross_ios_test.dart  cmake_builder_cross_linux_host_test.dart  cmake_builder_cross_macos_host_test.dart  cmake_builder_cross_windows_host_test.dart  cmake_builder_git_test.dart  cmake_builder_test.dart
test/builder/testfiles/add/: CMakeLists.txt
test/builder/testfiles/add/src/: add.c  add.h
test/native_toolchain/: apple_clang_test.dart  clang_test.dart  cmake_test.dart  gcc_test.dart  msvc_test.dart  ndk_test.dart  ninja_test.dart  recognizer_test.dart  xcode_test.dart
test/tool/: tool_instance_test.dart  tool_requirement_test.dart  tool_resolver_test.dart  (+1 more)
(+59 files in other folders)
